language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_from_use_expression_with_single_pattern.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  use a <- wibble(1, 2)\n  todo\n  todo\n}\n\nfn wibble(n, m, f) {\n    f(1)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  use a <- wibble(1, 2)
      ↑                
  todo
  todo
}

fn wibble(n, m, f) {
    f(1)
}


----- AFTER ACTION

pub fn main() {
  wibble(1, 2, fn(a) {
    todo
    todo
  })
}

fn wibble(n, m, f) {
    f(1)
}
