language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_from_use_with_labels_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  use a <- wibble(1, two: 2)\n  todo\n}\n\nfn wibble(one _, two _, three f) {\n    f(1)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  use a <- wibble(1, two: 2)
  ↑                         
  todo
}

fn wibble(one _, two _, three f) {
    f(1)
}


----- AFTER ACTION

pub fn main() {
  wibble(1, two: 2, three: fn(a) {
    todo
  })
}

fn wibble(one _, two _, three f) {
    f(1)
}
