language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_from_use_with_trailing_comma_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  use a, b <- wibble(\n    1,\n    2,\n  )\n  todo\n}\n\nfn wibble(n, m, f) {\n    f(todo, todo)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  use a, b <- wibble(
           ▔▔▔↑      
    1,
    2,
  )
  todo
}

fn wibble(n, m, f) {
    f(todo, todo)
}


----- AFTER ACTION

pub fn main() {
  wibble(
    1,
    2,
  fn(a, b) {
    todo
  })
}

fn wibble(n, m, f) {
    f(todo, todo)
}
